// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render a nested list 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

<ul
  class="circuit-0"
>
  <li>
    First level
  </li>
  <ul
    class="circuit-0"
  >
    <li>
      Second level
    </li>
  </ul>
</ul>
`;

exports[`List should render the ordered variant 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

<ol
  class="circuit-0"
>
  <li>
    ordered
  </li>
</ol>
`;

exports[`List should render the unordered variant 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

<ul
  class="circuit-0"
>
  <li>
    unordered
  </li>
</ul>
`;

exports[`List should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

<ul
  class="circuit-0"
>
  <li>
    List
  </li>
</ul>
`;

exports[`List should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 16px;
  line-height: 24px;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 li:last-child {
  margin-bottom: 0;
}

.circuit-0 ul:last-child,
.circuit-0 ol:last-child {
  margin-bottom: 0;
}

<ul
  class="circuit-0"
>
  <li>
    no margin
  </li>
</ul>
`;

exports[`List should render with size one 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
}

.circuit-0 li {
  margin-bottom: 8px;
  margin-left: 12px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 8px;
  margin-left: 12px;
}

<ul
  class="circuit-0"
>
  <li>
    one
  </li>
</ul>
`;

exports[`List should render with size two 1`] = `
.circuit-0 {
  font-weight: 400;
  padding-left: 12px;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 16px;
}

.circuit-0 li {
  margin-bottom: 12px;
  margin-left: 4px;
}

.circuit-0 ul,
.circuit-0 ol {
  margin-bottom: 12px;
  margin-left: 4px;
}

<ul
  class="circuit-0"
>
  <li>
    two
  </li>
</ul>
`;
